add navbar html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
   <title>Document</title>
 </head>
 <body>
+    <!--========== NAV ========== -->
+  <div class="nav-container">
+    <nav class="nav">
+      <h1 id="nav-logo">Jaden KD</h1>
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <ul class="nav-menu">
+        <li><a href="#" class="nav-links"> About Me</a></li>
+        <li><a href="#" class="nav-links">Skills</a></li>
+        <li><a href="#" class="nav-links">Services</a></li>
+        <li><a href="#" class="nav-links">Projects</a></li>
+        <li><a href="#" class="nav-links">Testimonials</a></li>
+        <li><a href="#" class="nav-links">Contact Me</a></li>
+      </ul>
+    </nav>
+  </div>
+
   
   <!--========== MAIN JS ========== -->
   <script src="app/js/main.js"></script>
