hero css and pictures

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       </ul>
     </nav>
   </div>
+  <div class="hero" style="background-image: url('./app/docs/laptop.jpg');" >
+    <div class="hero-text">
+      <h1>Hi, <br>I'm Jaden King-Doyles</h1>
+      <p>Full-Stack Developer</p>
+    </div>
+    <div class="blob" style="background-image: url('./app/docs/port.jpg');"></div>
+  </div>
 
   
   <!--========== MAIN JS ========== -->
