functionality and css for skils and about

--- a/index.html
+++ b/index.html
@@ -44,7 +44,48 @@
     </div>
     <div class="blob" style="background-image: url('./app/docs/port.jpg');"></div>
   </div>
+  <div class="about">
+    <div class="eight">
+      <h1>About Me</h1>
+    </div>
+    <div class="about-info">
+      <div class="about-img">
+        <div class="animated-border"><img src="./app/docs/about.jpg" /></div>
+      </div>
+    <div >
+      <p>I am an outgoing person with passion for new learning environments. I love being active by playing a variety of sports and working out. i have an itch for acquiring skills, not only for myself but to start an organisation help my community grow. I am starting the foundation of my career in the workforce as a junior full stack developer to grow my knowledge and ability to create apps and websites in such a technology advanced era. As well as a mortgage agent to pursue my desire to work in real estate. Join me on my journey to entrepreneurship using the skills, experience and knowledge i attain on the way.
+      </p>
+    </div>
+    </div>
+  </div>
+  <div class="skills">
+        <div class="eight">
+      <h1 style="color: white;">Skills</h1>
+    </div>
+    <div class="tabs">
+      <div class="tab">
+        <input type="checkbox" id="chck1">
+        <label class="tab-label" for="chck1">Frontend</label>
+        <div class="tab-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, earum facilis? Quibusdam aliquid debitis atque sit? Aliquid veniam nihil tempore asperiores facilis accusamus, quia quas modi architecto impedit inventore consectetur.
+        </div>
+      </div>
+            <div class="tab">
+        <input type="checkbox" id="chck3">
+        <label class="tab-label" for="chck3">Backend</label>
+        <div class="tab-content">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
+        </div>
+      </div>
+      <div class="tab">
+        <input type="checkbox" id="chck2">
+        <label class="tab-label" for="chck2">Design</label>
+        <div class="tab-content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+        </div>
+      </div>
 
+  </div>
   
   <!--========== MAIN JS ========== -->
   <script src="app/js/main.js"></script>
