move css into respective files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   
   <!--========== CSS ========== -->
   <link rel="stylesheet" href="./app/css/styles.css" type="text/css">
+  <link rel="stylesheet" href="./app/css/about.css" type="text/css">
+  <link rel="stylesheet" href="./app/css/skills.css" type="text/css">
 
 
   <!--========== <!>========== -->
