--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
   
   <!--========== UNICONS ========== -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -69,27 +71,88 @@
         <input type="checkbox" id="chck1">
         <label class="tab-label" for="chck1">Frontend</label>
         <div class="tab-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, earum facilis? Quibusdam aliquid debitis atque sit? Aliquid veniam nihil tempore asperiores facilis accusamus, quia quas modi architecto impedit inventore consectetur.
+<div class="skillbar clearfix " data-percent="65%">
+	<div class="skillbar-title" style="background: black;"><span>HTML5</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">65%</div>
+</div>
+<div class="skillbar clearfix " data-percent="85%">
+	<div class="skillbar-title" style="background: black;"><span>CSS</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">85%</div>
+</div>
+<!----- jQuery  ------->
+<div class="skillbar clearfix " data-percent="60%">
+	<div class="skillbar-title" style="background: black;"><span>Javascript</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">60%</div>
+</div>
+<div class="skillbar clearfix " data-percent="60%">
+	<div class="skillbar-title" style="background: black;"><span>React</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">60%</div>
+</div>
+<!----- /jQuery  ------->
         </div>
       </div>
             <div class="tab">
         <input type="checkbox" id="chck3">
         <label class="tab-label" for="chck3">Backend</label>
         <div class="tab-content">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, reiciendis!
-        </div>
+<div class="skillbar clearfix " data-percent="65%">
+	<div class="skillbar-title" style="background: black;"><span>HTML5</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">65%</div>
+</div>
+<div class="skillbar clearfix " data-percent="85%">
+	<div class="skillbar-title" style="background: black;"><span>CSS</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">85%</div>
+</div>
+<!----- jQuery  ------->
+<div class="skillbar clearfix " data-percent="60%">
+	<div class="skillbar-title" style="background: black;"><span>Javascript</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">60%</div>
+</div>
+<div class="skillbar clearfix " data-percent="60%">
+	<div class="skillbar-title" style="background: black;"><span>React</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">60%</div>
+</div>
+<!----- /jQuery  ------->        </div>
       </div>
       <div class="tab">
         <input type="checkbox" id="chck2">
         <label class="tab-label" for="chck2">Design</label>
         <div class="tab-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
-        </div>
+<div class="skillbar clearfix " data-percent="65%">
+	<div class="skillbar-title" style="background: black;"><span>HTML5</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">65%</div>
+</div>
+<div class="skillbar clearfix " data-percent="85%">
+	<div class="skillbar-title" style="background: black;"><span>CSS</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">85%</div>
+</div>
+<!----- jQuery  ------->
+<div class="skillbar clearfix " data-percent="60%">
+	<div class="skillbar-title" style="background: black;"><span>Javascript</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">60%</div>
+</div>
+<div class="skillbar clearfix " data-percent="60%">
+	<div class="skillbar-title" style="background: black;"><span>React</span></div>
+	<div class="skillbar-bar" style="background: #a9a9a9;"></div>
+	<div class="skill-bar-percent">60%</div>
+</div>
+<!----- /jQuery  ------->        </div>
       </div>
 
   </div>
   
   <!--========== MAIN JS ========== -->
-  <script src="app/js/main.js"></script>
+  <script type="text/javascript" src="app/js/main.js"></script>
 </body>
 </html>
