touch up projects and services css

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 href="#"
                 class="button button--flex button--small portfolio__button"
               >
-                Demo
+                Code
                 <i class="uil uil-arrow-right button__icon"></i>
               </a>
             </div>
@@ -278,7 +278,7 @@
                 href="#"
                 class="button button--flex button--small portfolio__button"
               >
-                Demo
+                Code
                 <i class="uil uil-arrow-right button__icon"></i>
               </a>
             </div>
