--- a/index.html
+++ b/index.html
@@ -94,34 +94,34 @@
           <input type="checkbox" id="chck1" />
           <label class="tab-label" for="chck1">Frontend</label>
           <div class="tab-content">
-            <div class="skillbar clearfix" data-percent="65%">
+            <div class="skillbar clearfix" data-percent="75%">
               <div class="skillbar-title" style="background: black">
-                <span>HTML5</span>
+                <span>HTML</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">65%</div>
+              <div class="skill-bar-percent">75%</div>
             </div>
-            <div class="skillbar clearfix" data-percent="85%">
+            <div class="skillbar clearfix" data-percent="65%">
               <div class="skillbar-title" style="background: black">
                 <span>CSS</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">85%</div>
+              <div class="skill-bar-percent">65%</div>
             </div>
             <!----- jQuery  ------->
-            <div class="skillbar clearfix" data-percent="60%">
+            <div class="skillbar clearfix" data-percent="80%">
               <div class="skillbar-title" style="background: black">
                 <span>Javascript</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">60%</div>
+              <div class="skill-bar-percent">80%</div>
             </div>
-            <div class="skillbar clearfix" data-percent="60%">
+            <div class="skillbar clearfix" data-percent="80%">
               <div class="skillbar-title" style="background: black">
                 <span>React</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">60%</div>
+              <div class="skill-bar-percent">80%</div>
             </div>
             <!----- /jQuery  ------->
           </div>
@@ -132,32 +132,32 @@
           <div class="tab-content">
             <div class="skillbar clearfix" data-percent="65%">
               <div class="skillbar-title" style="background: black">
-                <span>HTML5</span>
+                <span>Postgress</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
               <div class="skill-bar-percent">65%</div>
             </div>
-            <div class="skillbar clearfix" data-percent="85%">
+            <div class="skillbar clearfix" data-percent="65%">
               <div class="skillbar-title" style="background: black">
-                <span>CSS</span>
+                <span>Jquery</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">85%</div>
+              <div class="skill-bar-percent">65%</div>
             </div>
             <!----- jQuery  ------->
-            <div class="skillbar clearfix" data-percent="60%">
+            <div class="skillbar clearfix" data-percent="80%">
               <div class="skillbar-title" style="background: black">
-                <span>Javascript</span>
+                <span>Node JS</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">60%</div>
+              <div class="skill-bar-percent">80%</div>
             </div>
-            <div class="skillbar clearfix" data-percent="60%">
+            <div class="skillbar clearfix" data-percent="75%">
               <div class="skillbar-title" style="background: black">
-                <span>React</span>
+                <span>SQL</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">60%</div>
+              <div class="skill-bar-percent">75%</div>
             </div>
             <!----- /jQuery  ------->
           </div>
@@ -166,36 +166,20 @@
           <input type="checkbox" id="chck2" />
           <label class="tab-label" for="chck2">Design</label>
           <div class="tab-content">
-            <div class="skillbar clearfix" data-percent="65%">
+            <div class="skillbar clearfix" data-percent="75%">
               <div class="skillbar-title" style="background: black">
-                <span>HTML5</span>
+                <span>Figma</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">65%</div>
+              <div class="skill-bar-percent">75%</div>
             </div>
-            <div class="skillbar clearfix" data-percent="85%">
+            <div class="skillbar clearfix" data-percent="70%">
               <div class="skillbar-title" style="background: black">
-                <span>CSS</span>
+                <span>Trello</span>
               </div>
               <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">85%</div>
+              <div class="skill-bar-percent">70%</div>
             </div>
-            <!----- jQuery  ------->
-            <div class="skillbar clearfix" data-percent="60%">
-              <div class="skillbar-title" style="background: black">
-                <span>Javascript</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">60%</div>
-            </div>
-            <div class="skillbar clearfix" data-percent="60%">
-              <div class="skillbar-title" style="background: black">
-                <span>React</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">60%</div>
-            </div>
-            <!----- /jQuery  ------->
           </div>
         </div>
       </div>
@@ -235,7 +219,7 @@
     <!--==================== PORTFOLIO ====================-->
     <section class="portfolio section" id="portfolio">
       <div class="eight">
-        <h1>Portfolio</h1>
+        <h1>Projects</h1>
       </div>
       <div class="portfolio__container container swiper-container">
         <div class="swiper-wrapper">
