add html,css for contact form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ></script>
 
     <!--========== UNICONS ========== -->
-    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"> -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
     <!--========== CSS ========== -->
     <link rel="stylesheet" href="./app/css/styles.css" type="text/css" />
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./app/css/services.css" type="text/css" />
     <link rel="stylesheet" href="./app/css/projects.css" type="text/css" />
     <link rel="stylesheet" href="./app/css/testimonial.css" type="text/css" />
+      <link rel="stylesheet" href="./app/css/contact.css" type="text/css" />
     <link rel="stylesheet" href="./app/icons/css/all.css" type="text/css" />
     <link rel="stylesheet" href="app/css/swiper-bundle.min.css" />
 
@@ -377,7 +378,7 @@
             </div>
 
             <p class="testimonial__description">
-Jaden was a pleasure to work with and his contributions to the project were extremely valuable. His attention to detail and artistic talents played an important role in the success of this project. His insight to changes regarding the layout of the services section helped to make the overall design and finished product a much better design than we expected. I would highly recommend highering Jaden as his potential is without limits and he surely has a bright future in this industry.
+" Jaden was a pleasure to work with and his contributions to the project were extremely valuable. His attention to detail and artistic talents played an important role in the success of this project. His insight to changes regarding the layout of the services section helped to make the overall design and finished product a much better design than we expected. I would highly recommend highering Jaden as his potential is without limits and he surely has a bright future in this industry. "
             </p>
           </div>
 
@@ -395,13 +396,76 @@ Jaden was a pleasure to work with and his contributions to the project were extr
             </div>
 
             <p class="testimonial__description">
-The All Stars team did a great job - Kweku, Selene, Jaden, Jaylen and Micheala, they followed directions and showcased their own skills. I am very happy with the overall final delivery of the project.
+" The All Stars team did a great job - Kweku, Selene, Jaden, Jaylen and Micheala, they followed directions and showcased their own skills. I am very happy with the overall final delivery of the project. "
             </p>
           </div>
         </div>
-        <!-- <div class="swiper-pagination swiper-pagination-testimonial"></div> -->
+        <div class="swiper-pagination swiper-pagination-testimonial"></div>
       </div>
     </section>
+
+            <!--==================== CONTACT ME ====================-->
+            <section class="contact section" id="contact">
+      <div class="contact_title">
+        <div class="eight">
+          <h1>Contact Me</h1>
+        </div>
+      </div>
+
+                <div class="contact__container container grid">
+                    <div class="my-info">
+
+                        <div class="contact__information">
+                            <i class="uil uil-envelope contact__icon"></i>
+                            <div>
+                                <h3 class="contact__title">Email</h3>
+                                <span class="contact__subtitle">Jadenbusiness@email.com</span>
+                            </div>
+                        </div>
+
+                        <div class="contact__information">
+                            <i class="uil uil-map-marker contact__icon"></i>
+                            <div>
+                                <h3 class="contact__title">Location</h3>
+                                <span class="contact__subtitle">Greater Toronto Area</span>
+                            </div>
+                        </div>
+                    </div>
+<div class="form-wrap">
+
+  <form action="" class="contact__form grid">
+      <div class="contact__inputs grid">
+          <div class="contact__content">
+              <label for="" class="contact__label">Name</label>
+              <input type="text" class="contact__input">
+          </div>
+          <div class="contact__content">
+              <label for="" class="contact__label">Email</label>
+              <input type="email" class="contact__input">
+          </div>
+      </div>
+      <div class="contact__content">
+          <label for="" class="contact__label">Project</label>
+          <input type="text" class="contact__input">
+      </div>
+      <div class="contact__content">
+          <label for="" class="contact__label">Message</label>
+          <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+      </div>
+      
+      <div>
+          <a href="#" class="button button--flex">
+              Send Message
+              <i class="uil uil-message button__icon"></i>
+          </a>
+      </div>
+  </form>
+</div>
+                </div>
+
+            </section>
+
+            
 
     <!--========== MAIN JS ========== -->
     <script type="text/javascript" src="app/js/main.js"></script>
