--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
           </div>
         </div>
         <div class="tab">
-          <input type="checkbox" id="chck3" />
-          <label class="tab-label" for="chck3">Backend</label>
+          <input type="checkbox" id="chck2" />
+          <label class="tab-label" for="chck2">Backend</label>
           <div class="tab-content">
             <div class="skillbar clearfix" data-percent="65%">
               <div class="skillbar-title" style="background: black">
@@ -167,8 +167,8 @@
           </div>
         </div>
         <div class="tab">
-          <input type="checkbox" id="chck2" />
-          <label class="tab-label" for="chck2">Design</label>
+          <input type="checkbox" id="chck3" />
+          <label class="tab-label" for="chck3">Design</label>
           <div class="tab-content">
             <div class="skillbar clearfix" data-percent="75%">
               <div class="skillbar-title" style="background: black">
@@ -339,10 +339,8 @@
         </div>
 
         <div class="swiper-button-next">
-          <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
         </div>
         <div class="swiper-button-prev">
-          <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
         </div>
 
         <div class="swiper-pagination"></div>
@@ -433,29 +431,29 @@
                     </div>
 <div class="form-wrap">
 
-  <form action="" class="contact__form grid">
+  <form action="https://formsubmit.co/jadenbusiness@hotmail.com" method="POST" class="contact__form grid">
       <div class="contact__inputs grid">
           <div class="contact__content">
               <label for="" class="contact__label">Name</label>
-              <input type="text" class="contact__input">
+              <input type="text" name="name" class="contact__input" required>
           </div>
           <div class="contact__content">
               <label for="" class="contact__label">Email</label>
-              <input type="email" class="contact__input">
+              <input type="email" name="email" class="contact__input" required>
           </div>
       </div>
       <div class="contact__content">
-          <label for="" class="contact__label">Project</label>
-          <input type="text" class="contact__input">
+          <label for="" class="contact__label">Subject</label>
+          <input type="text" name="subject" class="contact__input" required>
       </div>
       <div class="contact__content">
           <label for="" class="contact__label">Message</label>
-          <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+          <textarea name="message" id="" cols="0" rows="7" class="contact__input" required></textarea>
       </div>
       
       <div>
-          <a href="#" class="button button--flex">
-              Send Message
+          <button type="submit" href="#" class="button button--flex">
+              Send Message</button>
               <i class="uil uil-message button__icon"></i>
           </a>
       </div>
