--- a/index.html
+++ b/index.html
@@ -453,8 +453,9 @@
       
       <div>
           <button type="submit" href="#" class="button button--flex">
-              Send Message</button>
+              Send Message 
               <i class="uil uil-message button__icon"></i>
+            </button>
           </a>
       </div>
   </form>
