add nav links functionality

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
           <span class="bar"></span>
         </div>
         <ul class="nav-menu">
-          <li><a href="#" class="nav-links"> About Me</a></li>
-          <li><a href="#" class="nav-links">Skills</a></li>
-          <li><a href="#" class="nav-links">Services</a></li>
-          <li><a href="#" class="nav-links">Projects</a></li>
-          <li><a href="#" class="nav-links">Testimonials</a></li>
-          <li><a href="#" class="nav-links">Contact Me</a></li>
+          <li><a href="#about" class="nav-links active-link"> About</a></li>
+          <li><a href="#skills" class="nav-links active-link">Skills</a></li>
+          <li><a href="#services" class="nav-links active-link">Services</a></li>
+          <li><a href="#projects" class="nav-links active-link">Projects</a></li>
+          <li><a href="#testimonials" class="nav-links active-link">Testimonials</a></li>
+          <li><a href="#contact" class="nav-links active-link">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -63,165 +63,177 @@
         style="background-image: url('./app/docs/port.jpg')"
       ></div>
     </div>
-    <div class="about">
-      <div class="eight">
-        <h1>About Me</h1>
-      </div>
-      <div class="about-info">
-        <div class="about-img">
-          <div class="animated-border">
-            <img class="animated-border-img" src="./app/docs/about.jpg" />
-          </div>
-        </div>
-        <div>
-          <p>
-            I am an outgoing person with passion for new learning environments.
-            I love being active by playing a variety of sports and working out.
-            I have an itch for acquiring skills, not only for myself but to
-            start an organization help my community grow. I am starting the
-            foundation of my career in the workforce as a junior full stack
-            developer to grow my knowledge and ability to create apps and
-            websites in such a technology advanced era, as well as a mortgage
-            agent to pursue my desire to work in real estate. Join me on my
-            journey to entrepreneurship using the skills, experience and
-            knowledge I attain on the way.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="skills">
-      <div class="eight">
-        <h1 style="color: white">Skills</h1>
-      </div>
-      <div class="tabs">
-        <div class="tab">
-          <input type="checkbox" id="chck1" />
-          <label class="tab-label" for="chck1">Frontend</label>
-          <div class="tab-content">
-            <div class="skillbar clearfix" data-percent="75%">
-              <div class="skillbar-title" style="background: black">
-                <span>HTML</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">75%</div>
-            </div>
-            <div class="skillbar clearfix" data-percent="65%">
-              <div class="skillbar-title" style="background: black">
-                <span>CSS</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">65%</div>
-            </div>
-            <!----- jQuery  ------->
-            <div class="skillbar clearfix" data-percent="80%">
-              <div class="skillbar-title" style="background: black">
-                <span>Javascript</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">80%</div>
-            </div>
-            <div class="skillbar clearfix" data-percent="80%">
-              <div class="skillbar-title" style="background: black">
-                <span>React</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">80%</div>
-            </div>
-            <!----- /jQuery  ------->
-          </div>
-        </div>
-        <div class="tab">
-          <input type="checkbox" id="chck2" />
-          <label class="tab-label" for="chck2">Backend</label>
-          <div class="tab-content">
-            <div class="skillbar clearfix" data-percent="65%">
-              <div class="skillbar-title" style="background: black">
-                <span>Postgress</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">65%</div>
-            </div>
-            <div class="skillbar clearfix" data-percent="65%">
-              <div class="skillbar-title" style="background: black">
-                <span>Jquery</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">65%</div>
-            </div>
-            <!----- jQuery  ------->
-            <div class="skillbar clearfix" data-percent="80%">
-              <div class="skillbar-title" style="background: black">
-                <span>Node JS</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">80%</div>
-            </div>
-            <div class="skillbar clearfix" data-percent="75%">
-              <div class="skillbar-title" style="background: black">
-                <span>SQL</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">75%</div>
-            </div>
-            <!----- /jQuery  ------->
-          </div>
-        </div>
-        <div class="tab">
-          <input type="checkbox" id="chck3" />
-          <label class="tab-label" for="chck3">Design</label>
-          <div class="tab-content">
-            <div class="skillbar clearfix" data-percent="75%">
-              <div class="skillbar-title" style="background: black">
-                <span>Figma</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">75%</div>
-            </div>
-            <div class="skillbar clearfix" data-percent="70%">
-              <div class="skillbar-title" style="background: black">
-                <span>Trello</span>
-              </div>
-              <div class="skillbar-bar" style="background: #a9a9a9"></div>
-              <div class="skill-bar-percent">70%</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="services">
-      <div class="eight">
-        <h1>Services</h1>
-      </div>
-      <div class="card-holder">
-        <div class="card">
-          <i
-            class="fa-solid fa-7x fa-code"
-            style="color: white; padding-top: 8%"
-          ></i>
-          <h3>Web Design</h3>
-          <p>ui/ux development</p>
-        </div>
-        <div class="card">
-          <i
-            class="fa-solid fa-7x fa-paintbrush"
-            style="color: white; padding-top: 8%"
-          ></i>
-          <h3>Ui Design</h3>
-          <p>create ui's and web templates</p>
-        </div>
-        <div class="card">
-          <i
-            class="fa-solid fa-7x fa-people-group"
-            style="color: white; padding-top: 8%"
-          ></i>
-          <h3>Dev Team</h3>
-          <p>developer team for large projects</p>
-        </div>
-      </div>
-    </div>
+    <section id="about">
 
-    <!--==================== PORTFOLIO ====================-->
-    <section class="portfolio section" id="portfolio">
+
+      <div class="about">
+        <div class="eight">
+          <h1>About Me</h1>
+        </div>
+        <div class="about-info">
+          <div class="about-img">
+            <div class="animated-border">
+              <img class="animated-border-img" src="./app/docs/about.jpg" />
+            </div>
+          </div>
+          <div>
+            <p>
+              I am an outgoing person with passion for new learning environments.
+              I love being active by playing a variety of sports and working out.
+              I have an itch for acquiring skills, not only for myself but to
+              start an organization help my community grow. I am starting the
+              foundation of my career in the workforce as a junior full stack
+              developer to grow my knowledge and ability to create apps and
+              websites in such a technology advanced era, as well as a mortgage
+              agent to pursue my desire to work in real estate. Join me on my
+              journey to entrepreneurship using the skills, experience and
+              knowledge I attain on the way.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="skills">
+
+      <div class="skills">
+        <div class="eight">
+          <h1 style="color: white">Skills</h1>
+        </div>
+        <div class="tabs">
+          <div class="tab">
+            <input type="checkbox" id="chck1" />
+            <label class="tab-label" for="chck1">Frontend</label>
+            <div class="tab-content">
+              <div class="skillbar clearfix" data-percent="75%">
+                <div class="skillbar-title" style="background: black">
+                  <span>HTML</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">75%</div>
+              </div>
+              <div class="skillbar clearfix" data-percent="65%">
+                <div class="skillbar-title" style="background: black">
+                  <span>CSS</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">65%</div>
+              </div>
+              <!----- jQuery  ------->
+              <div class="skillbar clearfix" data-percent="80%">
+                <div class="skillbar-title" style="background: black">
+                  <span>Javascript</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">80%</div>
+              </div>
+              <div class="skillbar clearfix" data-percent="80%">
+                <div class="skillbar-title" style="background: black">
+                  <span>React</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">80%</div>
+              </div>
+              <!----- /jQuery  ------->
+            </div>
+          </div>
+          <div class="tab">
+            <input type="checkbox" id="chck2" />
+            <label class="tab-label" for="chck2">Backend</label>
+            <div class="tab-content">
+              <div class="skillbar clearfix" data-percent="65%">
+                <div class="skillbar-title" style="background: black">
+                  <span>Postgress</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">65%</div>
+              </div>
+              <div class="skillbar clearfix" data-percent="65%">
+                <div class="skillbar-title" style="background: black">
+                  <span>Jquery</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">65%</div>
+              </div>
+              <!----- jQuery  ------->
+              <div class="skillbar clearfix" data-percent="80%">
+                <div class="skillbar-title" style="background: black">
+                  <span>Node JS</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">80%</div>
+              </div>
+              <div class="skillbar clearfix" data-percent="75%">
+                <div class="skillbar-title" style="background: black">
+                  <span>SQL</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">75%</div>
+              </div>
+              <!----- /jQuery  ------->
+            </div>
+          </div>
+          <div class="tab">
+            <input type="checkbox" id="chck3" />
+            <label class="tab-label" for="chck3">Design</label>
+            <div class="tab-content">
+              <div class="skillbar clearfix" data-percent="75%">
+                <div class="skillbar-title" style="background: black">
+                  <span>Figma</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">75%</div>
+              </div>
+              <div class="skillbar clearfix" data-percent="70%">
+                <div class="skillbar-title" style="background: black">
+                  <span>Trello</span>
+                </div>
+                <div class="skillbar-bar" style="background: #a9a9a9"></div>
+                <div class="skill-bar-percent">70%</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <section id="services">
+
+
+      <div class="services">
+        <div class="eight">
+          <h1>Services</h1>
+        </div>
+        <div class="card-holder">
+          <div class="card">
+            <i
+              class="fa-solid fa-7x fa-code"
+              style="color: white; padding-top: 8%"
+            ></i>
+            <h3>Web Design</h3>
+            <p>ui/ux development</p>
+          </div>
+          <div class="card">
+            <i
+              class="fa-solid fa-7x fa-paintbrush"
+              style="color: white; padding-top: 8%"
+            ></i>
+            <h3>Ui Design</h3>
+            <p>create ui's and web templates</p>
+          </div>
+          <div class="card">
+            <i
+              class="fa-solid fa-7x fa-people-group"
+              style="color: white; padding-top: 8%"
+            ></i>
+            <h3>Dev Team</h3>
+            <p>developer team for large projects</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--==================== Projects ====================-->
+    <section class="portfolio section" id="projects">
       <div class="eight">
         <h1>Projects</h1>
       </div>
@@ -348,7 +360,7 @@
     </section>
 
     <!--==================== TESTIMONIAL ====================-->
-    <section class="testimonial section">
+    <section class="testimonial section" id="testimonials">
       <div class="testimonial_title">
         <div class="eight">
           <h1>Testimonials</h1>
