--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               style="color: white; padding-top: 8%"
             ></i>
             <h3>Web Design</h3>
-            <p>ui/ux development</p>
+            <p>UI/UX Development</p>
           </div>
           <div class="card">
             <i
@@ -218,7 +218,7 @@
               style="color: white; padding-top: 8%"
             ></i>
             <h3>Ui Design</h3>
-            <p>create ui's and web templates</p>
+            <p>Create ui's and web templates</p>
           </div>
           <div class="card">
             <i
@@ -226,7 +226,7 @@
               style="color: white; padding-top: 8%"
             ></i>
             <h3>Dev Team</h3>
-            <p>developer team for large projects</p>
+            <p>Developer team for large projects</p>
           </div>
         </div>
       </div>
