--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             <i class="uil uil-envelope contact__icon"></i>
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">Jadenbusiness@email.com</span>
+                                <span class="contact__subtitle">Jadenbusiness@hotmail.com</span>
                             </div>
                         </div>
 
